fixed z-index

--- a/carousel.css
+++ b/carousel.css
@@ -36,7 +36,7 @@ body {
   }
 
   .img1 {
-      z-index: 1;
+      z-index: -1;
   }
 
   .img2 {
